// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly should render correctly 1`] = `
<div>
  <div
    class="task"
  >
    <div
      style="position: relative; margin-bottom: 10px;"
    >
      <img
        src="img/flux.svg"
        style="width: 100%; outline: 1px solid #BBB; outline-offset: -1px;"
      />
      <div
        class="monitor-task-info-bar"
      >
        <div
          class="ant-row css-dev-only-do-not-override-ixblex"
        >
          <div
            class="ant-col ant-col-12 css-dev-only-do-not-override-ixblex"
          >
            <div
              class="monitor-left-text"
            >
              <span
                aria-label="file"
                class="anticon anticon-file"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="file"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                  />
                </svg>
              </span>
               
              filename
            </div>
          </div>
          <div
            class="ant-col ant-col-12 css-dev-only-do-not-override-ixblex"
          >
            <div
              class="monitor-right-text"
            >
              <span
                aria-label="clock-circle"
                class="anticon anticon-clock-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="clock-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
                  />
                </svg>
              </span>
               
              1m 30s
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row css-dev-only-do-not-override-ixblex"
    >
      <div
        class="ant-col ant-col-12 css-dev-only-do-not-override-ixblex"
      >
        <div
          class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info ant-progress-default css-dev-only-do-not-override-ixblex"
          role="progressbar"
        >
          <div
            class="ant-progress-outer"
          >
            <div
              class="ant-progress-inner"
            >
              <div
                class="ant-progress-bg"
                style="width: 100%; height: 8px;"
              />
            </div>
          </div>
          <span
            class="ant-progress-text"
            title="100%"
          >
            100%
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-12 css-dev-only-do-not-override-ixblex"
      >
        <div
          style="display: flex; justify-content: flex-end;"
        >
          <div>
            Dummy MonitorControl
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly should render correctly when completed 1`] = `
<div>
  <div
    class="task"
  >
    <div
      style="position: relative; margin-bottom: 10px;"
    >
      <img
        src="img/flux.svg"
        style="width: 100%; outline: 1px solid #BBB; outline-offset: -1px;"
      />
      <div
        class="monitor-task-info-bar"
      >
        <div
          class="ant-row css-dev-only-do-not-override-ixblex"
        >
          <div
            class="ant-col ant-col-12 css-dev-only-do-not-override-ixblex"
          >
            <div
              class="monitor-left-text"
            >
              <span
                aria-label="file"
                class="anticon anticon-file"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="file"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                  />
                </svg>
              </span>
               
              filename
            </div>
          </div>
          <div
            class="ant-col ant-col-12 css-dev-only-do-not-override-ixblex"
          >
            <div
              class="monitor-right-text"
            >
              <span
                aria-label="clock-circle"
                class="anticon anticon-clock-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="clock-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
                  />
                </svg>
              </span>
               
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row css-dev-only-do-not-override-ixblex"
    >
      <div
        class="ant-col ant-col-12 css-dev-only-do-not-override-ixblex"
      >
        <div
          class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default css-dev-only-do-not-override-ixblex"
          role="progressbar"
        >
          <div
            class="ant-progress-outer"
          >
            <div
              class="ant-progress-inner"
            >
              <div
                class="ant-progress-bg"
                style="width: 100%; height: 8px;"
              />
            </div>
          </div>
          <span
            class="ant-progress-text"
          >
            <span
              aria-label="check-circle"
              class="anticon anticon-check-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-12 css-dev-only-do-not-override-ixblex"
      >
        <div
          style="display: flex; justify-content: flex-end;"
        >
          <div>
            Dummy MonitorControl
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
